--- a/setup.cfg
+++ b/setup.cfg
@@ -64,7 +64,9 @@ install_requires =
     urllib3==2.0.5
     vtk==9.2.6
     zipp==3.17.0
-    etas @ git+https://github.com/lmizrahi/etas@3.2#egg=etas
+    etas @ git+https://git.gfz-potsdam.de/csep/it_experiment/models/vetas.git@3.1#egg=etas
+
+
 python_requires = ==3.10.12
 zip_safe = no
 
