--- a/setup.cfg
+++ b/setup.cfg
@@ -55,6 +55,7 @@ install_requires =
     scikit-learn==1.3.1
     scooby==0.7.4
     seaborn==0.13.0
+    shapely==2.0.2
     snuggs==1.4.7
     sqlalchemy==2.0.21
     statsmodels==0.14.0
@@ -64,7 +65,7 @@ install_requires =
     urllib3==2.0.5
     vtk==9.2.6
     zipp==3.17.0
-    etas @ git+https://git.gfz-potsdam.de/csep/it_experiment/models/vetas.git@3.1#egg=etas
+    etas @ git+https://github.com/lmizrahi/etas@3.2#egg=etas
 
 
 python_requires = ==3.10.12
