--- a/requirements.txt
+++ b/requirements.txt
@@ -28,7 +28,7 @@ mercantile==1.2.1
 networkx==3.1
 obspy==1.4.0
 patsy==0.5.3
-pillow==10.0.1
+Pillow>=10.2.0
 platformdirs==3.10.0
 pooch==1.7.0
 pyshp==2.3.1
